# BitacoraAI

./: .env.example  .gitignore  README.md  pyproject.toml
src/workspace_memory/: __init__.py  cli.py  daemon.py
src/workspace_memory/capture/: __init__.py  clipboard.py  filesystem.py  manual_notes.py  terminal.py
src/workspace_memory/config/: __init__.py  settings.py
src/workspace_memory/runtime/: __init__.py  logging.py
src/workspace_memory/storage/: __init__.py  event_log.py  schemas.py
tests/: test_capture_phase2.py  test_schemas.py
